# clean-fast-api

./: Dockerfile  Makefile  docker-compose.yml
.devcontainer/: devcontainer.json
code/: Makefile  pyproject.toml
