
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Pedro Farias", email = "pedrohjfg@gmail.com"},
]
dependencies = [
    "fastapi>=0.96.0",
    "uvicorn[standard]>=0.22.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "pylint>=2.17.4",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.isort]
profile = "black"